--- a/styles.css
+++ b/styles.css
@@ -395,6 +395,15 @@ h2 {
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
+.internship h3 {
+    font-size: 1.15rem;
+    color: #fff;
+    text-decoration: none;
+}
+a {
+    text-decoration: none;
+}
+
 .internship:hover {
     transform: translateY(-10px);
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
@@ -405,11 +414,6 @@ h2 {
     max-height: 100px;
     margin-bottom: 20px;
     object-fit: contain;
-}
-
-.internship h3 {
-    font-size: 1.25rem;
-    color: #fff;
 }
 
 /* Responsive Adjustments */
@@ -673,3 +677,73 @@ footer {
   
 
 
+/* Testimonial Section */
+#testimonial {
+    background-color: #f4f4f4;
+    padding: 50px 0;
+    text-align: center;
+}
+
+#testimonial h2 {
+    font-size: 2.5rem;
+    margin-bottom: 50px;
+    color: #333;
+}
+
+.testimonial-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.testimonial {
+    background-color: white;
+    border: 1px solid #ddd;
+    padding: 20px;
+    border-radius: 10px;
+    max-width: 700px;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+}
+
+.testimonial-content p {
+    font-size: 1.2rem;
+    color: #555;
+    font-style: italic;
+    line-height: 1.5;
+    margin-bottom: 20px;
+}
+
+.testimonial-author {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.testimonial-author img {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-right: 20px;
+}
+
+.author-info {
+    text-align: left;
+}
+
+.author-info h3 {
+    font-size: 1.2rem;
+    color: #333;
+    margin-bottom: 5px;
+}
+
+.author-info a {
+    font-size: 1rem;
+    color: #0073b1;
+    text-decoration: none;
+}
+
+.author-info a:hover {
+    text-decoration: underline;
+}
