--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,8 @@ section {
     
 }
 
+
+
 /* Hero Section */
 #hero {
     display: flex;
@@ -275,6 +277,12 @@ h2 {
     margin-bottom: 50px;
 }
 
+@media (max-width: 1000px) {
+    #projects h2 {
+        text-align: left;
+    }
+}
+
 #projects .project-container {
     display: grid;
     gap: 70px;
@@ -307,6 +315,12 @@ h2 {
     border: 1px solid #d9d9d9;
     border-radius: 16px; /* Optional: gives the image rounded corners */
   }
+
+  @media (max-width: 1000px) {
+        .project-row .project-image img {
+            box-shadow: 10px 10px var(--secondary-color);
+        }
+    }
   
   .project-row.reverse {
     flex-direction: row-reverse;
@@ -316,6 +330,13 @@ h2 {
     margin-left: 20px;
     margin-right: 0;
   }
+
+  @media (max-width: 1000px) {
+    .project-row.reverse .project-description {
+        margin-left: 0px;
+        margin-right: 0;
+      }
+}
   
   
     #projects .desc-btn .disable {
@@ -353,6 +374,13 @@ h2 {
     height: 400px;
     background: var(--primary-color);
     border-radius: 8px;
+}
+
+@media (max-width: 1000px) {
+    #startup .startup-image {
+        max-width: none;
+        height: 300px;
+    }
 }
 
 #startup .disable {
@@ -402,6 +430,11 @@ h2 {
 }
 a {
     text-decoration: none;
+}
+
+.internships-container .internship img {
+    border-radius: 6px;
+    overflow: hidden;
 }
 
 .internship:hover {
@@ -517,8 +550,16 @@ a {
 /* Grid styling */
 #certificates .certificate-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 1.5rem;
+}
+
+@media (max-width: 640px) {
+    #certificates .certificate-container {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 1.5rem;
+    }
 }
 
 
@@ -680,7 +721,7 @@ footer {
 /* Testimonial Section */
 #testimonial {
     background-color: #f4f4f4;
-    padding: 50px 0;
+    padding: 50px 20px;
     text-align: center;
 }
 
@@ -746,4 +787,173 @@ footer {
 
 .author-info a:hover {
     text-decoration: underline;
+}
+
+
+@media (max-width: 1000px) {
+    nav ul {
+        flex-direction: column;
+        display: none;
+    }
+
+    nav ul.active {
+        display: block;
+        position: absolute;
+        top: 70px;
+        background-color: white;
+        width: 100%;
+        text-align: center;
+    }
+
+    .download-cv {
+        display: none;
+    }
+}
+
+@media (max-width: 1300px) {
+    nav ul {
+        flex-direction: column;
+        display: none;
+    }
+}
+
+@media (max-width: 1000px) {
+    .hero-container {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .hero-text h1 {
+        font-size: 36px;
+    }
+
+    .hero-image img {
+        width: 80%;
+        margin-top: 20px;
+    }
+}
+
+
+
+@media (max-width: 1000px) {
+    .about-container {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .about-skills {
+        gap: 10px;
+    }
+
+    .skill-card {
+        width: 100%;
+    }
+
+    #about .divider {
+        width: 80%;
+        min-height: 5px;
+        max-height: 5px;
+        margin-inline: auto;
+    }
+    
+}
+
+@media (max-width: 768px) {
+    .about-container {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .about-skills {
+        gap: 10px;
+    }
+
+    .skill-card {
+        width: 100%;
+    }
+}
+
+@media (max-width: 1000px) {
+    .project-row {
+        flex-direction: column;
+    }
+    
+    .project-row.reverse{
+        flex-direction: column;
+    }
+
+    .project-image img {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+}
+
+@media (max-width: 768px) {
+    .contact-info {
+        grid-template-columns: 1fr 1fr;
+        gap: 20px;
+    }
+}
+
+@media (max-width: 540px) {
+    .contact-info {
+        grid-template-columns: 1fr;
+        gap: 20px;
+    }
+}
+
+
+@media (max-width: 768px) {
+    section {
+        padding-inline: 8%;
+        
+    }
+    
+    #hero {
+        padding-inline: 8%;
+        
+    }
+    
+    #hero .hero-image {
+        width: 100%;
+        margin-top: 20px;
+    }
+    
+    #hero .hero-image img {
+        width: 100%;    
+    }
+    
+    #about {
+        padding-inline: 8%;
+        
+    }
+    
+}
+
+@media (max-width: 768px) {
+    .testimonial {
+        padding: 15px;
+        max-width: 100%;
+    }
+    
+    .testimonial h3 {
+        font-size: 16px;
+    }
+
+    .testimonial-content p {
+        font-size: 16px;
+    }
+    
+    .author-info a {
+        font-size: 14px;
+    }
+}
+
+.header-container, .about-container, .hero-container, .internships-container, .project-container, .certificate-container, .contact-info {
+    max-width: 1200px;
+    margin-inline: auto;
+}
+
+header .header-container {
+    max-width: 1400px;
 }
