--- a/styles.css
+++ b/styles.css
@@ -66,14 +66,14 @@ nav ul li {
     margin-left: 20px;
 }
 
-nav ul li a {
+header nav ul li a {
     color: var(--text-color);
     text-decoration: none;
     font-size: var(--font-size-default);
     transition: 0.2s ease;
 }
 
-nav ul li a:hover {
+header nav ul li a:hover {
     color: var(--secondary-color); /* Highlight color change on hover */
     text-decoration: underline;
 }
@@ -83,6 +83,144 @@ section {
     padding: var(--section-padding);
     
 }
+
+
+
+/* Hamburger Menu Styles */
+.hamburger {
+    display: none;
+    flex-direction: column;
+    cursor: pointer;
+    gap: 5px;
+    z-index: 101; /* Make sure it's on top */
+}
+
+.hamburger .bar {
+    width: 25px;
+    height: 3px;
+    background-color: var(--primary-color);
+    transition: all 0.3s ease;
+    border-radius: 10px;
+}
+
+.hamburger.active .bar:nth-child(2) {
+    opacity: 0;
+}
+
+.hamburger.active .bar:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+}
+
+.hamburger.active .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+}
+
+@media (max-width: 1300px) {
+    /* Hamburger becomes visible on smaller screens */
+    .hamburger {
+        display: flex;
+    }
+}
+
+.sec-nav {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+/* Sidebar Styles */
+.sidebar {
+    position: fixed;
+    top: 0;
+    left: -250px; /* Initially hidden */
+    width: 250px;
+    height: 100%;
+    background-color: #333;
+    padding: 20px;
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
+    transition: left 0.3s ease; /* Smooth slide effect */
+    z-index: 100;
+}
+
+.sidebar.active {
+    left: 0; /* Slide in when active */
+}
+
+.sidebar-menu ul {
+    list-style: none;
+    padding: 0;
+}
+
+.sidebar-menu ul li {
+    margin: 5px 0;
+}
+
+aside.sidebar-menu nav ul li a {
+    text-decoration: none;
+    color: #fff;
+    font-size: 20px;
+    display: block;
+    padding: 10px 0;
+}
+
+.sidebar-menu ul li a:hover {
+    color: var(--secondary-color);
+    text-decoration: underline;
+}
+
+.sidebar-menu ul  {
+    flex-direction: column;
+    gap: 2px!important;
+}
+
+.sidebar-menu ul a {
+    text-decoration: none;
+    color: #fff;
+    font-size: 20px;
+    display: block;
+    padding: 10px 0;
+}
+
+.sidebar-menu ul a.active {
+    color: #fff;
+}
+
+.aside-download-cv {
+    margin-top: 20px;
+    margin-right: 0;
+}
+
+@media (min-width: 1000px) {
+    .aside-download-cv {
+        display: none!important;
+    }
+
+}
+
+/* @media (max-width: 1000px) {
+    .aside-download-cv {
+        display: block;
+    }
+
+} */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -131,7 +269,6 @@ section {
     text-decoration: none;
     font-weight: bold;
     border-radius: 5px;
-    margin-right: 15px; /* Adds space between buttons */
     transition: background-color 0.3s ease, color 0.3s ease;
 }
 
@@ -149,10 +286,12 @@ section {
 .btn-secondary {
     background-color: var(--secondary-color);
     color: white;
+    border: 2px solid var(--secondary-color);
 }
 
 .btn-secondary:hover {
     background-color: var(--secondary-hover);
+    border: 2px solid var(--secondary-hover);
 }
 
 /* Ghost Button */
@@ -342,6 +481,7 @@ h2 {
     #projects .desc-btn .disable {
       cursor: not-allowed;
       border: 0;
+      opacity: 60%;
     }
 
     #projects .desc-btn .disable:hover {
@@ -791,7 +931,7 @@ footer {
 
 
 @media (max-width: 1000px) {
-    nav ul {
+    header nav ul {
         flex-direction: column;
         display: none;
     }
@@ -811,7 +951,7 @@ footer {
 }
 
 @media (max-width: 1300px) {
-    nav ul {
+    header nav ul {
         flex-direction: column;
         display: none;
     }
